juice-shop/dep_juice-shop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-juice-shop
  namespace: owasp-juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
      version: v1
  template:
    metadata:
      labels:
        app: juice-shop
        version: v1
    spec:
      containers:
        - name: juice-shop
          image: bkimminich/juice-shop
          ports:
            - containerPort: 3000
