juice-shop/deployment_juice-shop_portainer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    io.portainer.kubernetes.application.note: ""
  creationTimestamp: 2024-04-01T13:21:53Z
  generation: 1
  labels:
    io.portainer.kubernetes.application.name: owasp-juice-shop
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stack: owasp-juice-shop
  name: owasp-juice-shop
  namespace: owasp-juice-shop
  uid: 4fd6d48f-46a5-4360-b618-b150e63edc7c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: owasp-juice-shop
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: owasp-juice-shop
        io.portainer.kubernetes.application.name: owasp-juice-shop
    spec:
      containers:
        - image: bkimminich/juice-shop:latest
          imagePullPolicy: Always
          name: owasp-juice-shop
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: 2024-04-01T13:21:53Z
      lastUpdateTime: 2024-04-01T13:21:53Z
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: 2024-04-01T13:21:53Z
      lastUpdateTime: 2024-04-01T13:22:11Z
      message: ReplicaSet "owasp-juice-shop-7cd5f9fb6b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2024-04-01T13:21:53Z
  labels:
    io.portainer.kubernetes.application.name: owasp-juice-shop
    io.portainer.kubernetes.application.owner: admin
    io.portainer.kubernetes.application.stack: owasp-juice-shop
  name: owasp-juice-shop
  namespace: owasp-juice-shop
  uid: ba1bb552-1d08-4165-b571-42f99153afa7
spec:
  clusterIP: 10.43.183.196
  clusterIPs:
    - 10.43.183.196
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: port-0
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: owasp-juice-shop
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
