juice-shop/svc_juice-shop.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-juice-shop
  namespace: owasp-juice-shop
spec:
  selector:
    app: juice-shop
    version: v1
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
