juice-shop/ingress_juice-shop.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-juice-shop
  namespace: owasp-juice-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"    
spec:
  ingressClassName: nginx
  rules:
  - host: juice-shop.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-juice-shop
            port:
              number: 3000
